Added QR code functionality (from QRScanPage component)

--- a/src/app/qrentry/qrentry.page.html
+++ b/src/app/qrentry/qrentry.page.html
@@ -12,8 +12,8 @@
   </ion-header>
   <div class="qr-rrK">
     <div class="group3093">
-      <p class="t1-name">Dayanand</p>
-      <p class="t1-contact">Contact: 8861166237</p>
+      <p class="t1-name">{{ name }}</p>
+      <p class="t1-contact">Contact: {{ contact }}</p>
     </div>
 
     <div class="group3091" style="display: flex;">
