--- a/src/app/recycle-add/recycle-add.page.html
+++ b/src/app/recycle-add/recycle-add.page.html
@@ -24,7 +24,19 @@
       <ion-select-option value="Brown">Brown</ion-select-option>
       <ion-select-option value="Waste Bag">Waste Bag</ion-select-option>
       <ion-select-option value="Oil Cover">Oil Cover</ion-select-option>
+      <ion-select-option value="Food Cover">Food Cover</ion-select-option>
+      <ion-select-option value="Aluminium Tin">Aluminium Tin</ion-select-option>
+      <ion-select-option value="PET">PET</ion-select-option>
+      <ion-select-option value="Black Item">Black Item</ion-select-option>
+      <ion-select-option value="Metal">Metal</ion-select-option>
+      <ion-select-option value="E-waste">E-waste</ion-select-option>
+      <ion-select-option value="Ice-cream Cup">Ice-cream Cup</ion-select-option>
+      <ion-select-option value="Glass Bottle">Glass Bottle</ion-select-option>
+      <ion-select-option value="Mixed Item">Mixed Item</ion-select-option>
+      <ion-select-option value="Medicine Cover & Tonic">Medicine Cover $ Tonic</ion-select-option>
+      <ion-select-option value="colour">Colour</ion-select-option>
       <ion-select-option value="Waste Glass Plastic">Waste Glass Plastic</ion-select-option>
+    
     </ion-select>
   </ion-item>
 
