routing issue fixed

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -35,10 +35,10 @@
 
   <ion-grid class="ion-no-padding">
     <ion-row class="button-row">
-      <ion-col>
+      <ion-col class="button-col">
         <ion-button expand="block" id="recyclable-button" (click)="showRecyclableItems()">Recyclable</ion-button>
       </ion-col>
-      <ion-col>
+      <ion-col class="button-col">
         <ion-button expand="block" id="non-recyclable-button" (click)="showNonRecyclableItems()">Non-Recyclable</ion-button>
       </ion-col>
     </ion-row>
