--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -38,8 +38,13 @@ ion-label {
 }
 
 .button-row {
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-left: 4px;
+  padding-right: 4px;
+}
+
+.button-col{
+  padding-left: 4px;
+  padding-right: 4px;
 }
 
 .recyclable-button{
