added code to upload image

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,7 +39,7 @@
         Trips
       </ion-tab-button>
 
-      <ion-tab-button tab="folder/sell">
+      <ion-tab-button tab="add-image">
         <ion-icon src="../../assets/icons-custom/logo-inr.svg"></ion-icon>
         Sell
       </ion-tab-button>
