--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -17,5 +17,6 @@
   <div id="container">
     <strong class="capitalize">{{ folder }}</strong>
     <p>Explore <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+    <button (click)="calladdImage()">Add image test</button>
   </div>
 </ion-content>
