--- a/src/app/add-image/add-image.page.html
+++ b/src/app/add-image/add-image.page.html
@@ -21,6 +21,7 @@
   <ion-toolbar color="orange">
     <ion-button color="orange" expand="block" (click)="takePhoto()">Take Photo</ion-button>
     <ion-button color="orange" expand="block" (click)="saveImages()">Save</ion-button>
+    <!-- <ion-button color="orange" expand="block" (click)="createContainer()">Create Container</ion-button> -->
     <ion-button color="orange" expand="block" (click)="uploadImages()">Upload</ion-button>
   </ion-toolbar>
 </ion-footer>
