--- a/src/app/qrentry/qrentry.page.html
+++ b/src/app/qrentry/qrentry.page.html
@@ -17,7 +17,7 @@
     </div>
 
     <div class="group3091" style="display: flex;">
-      <ion-button color="#A56946"  class="rectangle35" routerLink="enter-waste" >
+      <ion-button color="#A56946"  class="rectangle35" (click)="navigateToEnterWaste()" >
         <ion-label>Enter Waste</ion-label>
       </ion-button>
     </div>
@@ -25,7 +25,7 @@
     <div class="line4"></div>
 
     <div class="group3089" style="display: flex;">
-      <ion-button  color="#A56946"  class="rectangle34" routerLink="add-payment">
+      <ion-button  color="#A56946"  class="rectangle34" (click)="navigateToEnterPayment()">
         <ion-label>Enter Payment</ion-label>
       </ion-button>
     </div>
