--- a/src/app/qrscan/qrscan.page.html
+++ b/src/app/qrscan/qrscan.page.html
@@ -37,6 +37,10 @@
 
   <div>
     <p class="scan-instruction">Place a barcode inside the scan area</p>
-  </div>
+  <!--Adding below buttonjust tonavigate to qrentry manually -->  
+  </div ><ion-button  style="position: fixed; bottom: 15px; left: 50%; transform: translateX(-50%);" (click)="goToQrentry()">
+    Go to Qrentry Page
+  </ion-button>
+  
 
 </ion-content>
