--- a/src/app/add-image/add-image.page.html
+++ b/src/app/add-image/add-image.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar color="orange">
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="home"></ion-back-button>
+      <ion-back-button defaultHref="enter-waste"></ion-back-button>
     </ion-buttons>
     <ion-title>Add Images</ion-title>
   </ion-toolbar>
