--- a/src/app/add-payment/add-payment.page.scss
+++ b/src/app/add-payment/add-payment.page.scss
@@ -21,11 +21,13 @@ ion-content {
 
 .add-payment-VEP {
   box-sizing: border-box;
-  padding-bottom: 32.9rem;
+  //padding-bottom: 32.9rem;
   width: 100%;
+  height: 100%;
   overflow: hidden;
   position: relative;
   align-items: center;
+  justify-content: center;
   display: flex;
   flex-direction: column;
   background-color: #ffffff;
@@ -96,7 +98,7 @@ ion-content {
   font-size: 12px;
   font-weight: 500;
   line-height: 20px;
-  letter-spacing: 0.30000001192092896px;
+  letter-spacing: 1px;
   color: #FFFFFF;
   text-align: left;
   white-space: nowrap;
