--- a/src/app/enter-waste/enter-waste.page.html
+++ b/src/app/enter-waste/enter-waste.page.html
@@ -13,30 +13,28 @@
     <div class="auto-group-ygvb-v8F">
       <div class="auto-group-4igw-eK9">
         <ion-label class="dry-waste-BZy">Dry Waste</ion-label>
-        <ion-checkbox class="rectangle-92-hYK"></ion-checkbox>
+        <ion-checkbox [(ngModel)]="drywaste" value="dry_waste" class="rectangle-92-hYK custom-checkbox"></ion-checkbox>
       </div>
       <div class="auto-group-yekh-p79">
         <ion-label class="wet-waste-kFh">Wet Waste</ion-label>
-        <ion-checkbox class="rectangle-93-Gjq"></ion-checkbox>
+        <ion-checkbox [(ngModel)]="wetwaste" value="wet_waste" class="rectangle-93-Gjq custom-checkbox"></ion-checkbox>
       </div>
       <div class="auto-group-sknj-zQw">
         <ion-label class="sanitary-waste-v3h">Sanitary Waste</ion-label>
-        <ion-checkbox class="rectangle-94-3PD"></ion-checkbox>
+        <ion-checkbox [(ngModel)]="sanitarywaste" value="sanitary_waste" class="rectangle-94-3PD custom-checkbox"></ion-checkbox>
       </div>
       <div class="auto-group-ygnb-9SF">
         <ion-label class="mixed-waste-gwy">Mixed Waste</ion-label>
-        <ion-checkbox class="rectangle-95-CfR"></ion-checkbox>
+        <ion-checkbox [(ngModel)]="mixedwaste" value="mixed_waste" class="rectangle-95-CfR custom-checkbox" (click)="navigateToAddPaymentPage()"></ion-checkbox>
       </div>
       <div class="auto-group-7dxd-itf">
         <ion-label class="no-waste-Ftb">No Waste</ion-label>
-        <ion-checkbox class="rectangle-97-C39"></ion-checkbox>
+        <ion-checkbox [(ngModel)]="nowaste" value="no_waste" class="rectangle-97-C39 custom-checkbox" (click)="navigateToAddPaymentPage()"></ion-checkbox>
       </div>
-      <ion-button color="#A56946" 
-      class="auto-group-jxjh-Jrs" routerLink=" "><ion-label>Continue</ion-label></ion-button>
+      <ion-button color="#A56946" class="auto-group-jxjh-Jrs" (click)="submitWaste()"><ion-label>Save</ion-label></ion-button>
     </div>
   </div>
 </ion-content>
-
 
 
 
