--- a/src/app/enter-waste/enter-waste.page.scss
+++ b/src/app/enter-waste/enter-waste.page.scss
@@ -1,4 +1,20 @@
 /* General styles */
+ion-header {
+  /* Maintain desired dimensions */
+  width: 100%;
+  height: 48px;
+  background: #A56946;
+
+  ion-icon {
+    width: 24px;
+    height: 24px;
+    top: 12px;
+    left: 8px;
+    padding: 6px 0;
+    display: flex;
+  }
+}
+
 ion-content {
   background-color: #ffffff;
   padding: 20px;
@@ -15,13 +31,18 @@ ion-content {
   background-color: #ffffff;
 }
 
+
+
 .auto-group-ygvb-v8F {
   width: 100%;
   padding: 14.9rem 2.8rem 19.6rem 2.8rem;
   display: flex;
   flex-direction: column;
   align-items: center;
+
 }
+
+
 
 .auto-group-4igw-eK9,
 .auto-group-yekh-p79,
@@ -38,11 +59,17 @@ ion-content {
   border-radius: 10px;
 }
 
-.rectangle-common {
-  width: 20px;
-  height: 20px;
-  border: 2px solid #000000;
+.rectangle-92-hYK,
+.rectangle-93-Gjq ,
+.rectangle-94-3PD,
+.rectangle-95-CfR,
+.rectangle-97-C39{
+  //width: 20px;
+ // height: 20px;
+  //border: 1px solid #000000;
   flex-shrink: 0;
+  padding: 0;
+  
 }
 
 .dry-waste-BZy,
@@ -62,6 +89,8 @@ ion-content {
   text-align: left;
 }
 
+
+
 .enter-waste-txF .auto-group-jxjh-Jrs {
   width: 304px;
   height: 54px;
@@ -79,3 +108,10 @@ ion-content {
   border-radius: 1rem;
   flex-shrink: 0;
 }
+
+
+
+
+
+
+
